--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,9 @@ dependencies {
             "com.codeborne:selenide:7.5.1",
             "org.junit.jupiter:junit-jupiter:5.10.0",
             'org.slf4j:slf4j-simple:2.0.7',
-            'io.qameta.allure:allure-selenide:2.29.0')
+            'io.qameta.allure:allure-selenide:2.29.0',
+            'com.github.javafaker:javafaker:1.0.2'
+    )
 }
 
 tasks.withType(JavaCompile).configureEach {
